# pf-evaluation

./: .gitignore  README.md  pyproject.toml
classify_binary/: flow.dag.yaml
classify_binary/.promptflow/: flow.tools.json
classify_binary/scripts/: calculate_metrics.py
classify_binary/templates/: prompt-template.jinja2
data/: texts.jsonl
flows/: classify.yaml
results/: results.ipynb
