[project]
name = "evaluation-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "promptflow>=1.18.1",
    "promptflow-tools>=1.6.1",
    "promptflow-tracing>=1.18.1",
    "scikit-learn>=1.7.1",
]
